examples/effects/failing/02_sealing_denies_filesystem.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/effects/failing/02_sealing_denies_filesystem.flx
// error[E427]: Sealed Effect Violation
//
// This expression was sealed to allow {Console}, but it performs {FileSystem}.
//
//   examples/effects/failing/02_sealing_denies_filesystem.flx:27:5
//    |
// 27 |     read_file("examples/effects/data.txt") sealing { Console }
//    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//    |     ---------------------------------------------------------- sealed expression exceeds its allowed effects
//
// Hint:
//   Remove the sealed call or include these effects in the sealing row: FileSystem.
//
// Note:
//   missing sealed effects: FileSystem
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E427

// The seal allows Console, but the expression performs FileSystem.

fn main() {
    read_file("examples/effects/data.txt") sealing { Console }
}
